Added validation for user input

--- a/config.json
+++ b/config.json
@@ -9,3 +9,4 @@ Temporary commit content 71
 Temporary commit content 88
 Temporary commit content 134
 Temporary commit content 145
+Temporary commit content 153
