--- a/config.json
+++ b/config.json
@@ -5,3 +5,4 @@ Temporary commit content 47
 Temporary commit content 50
 Temporary commit content 58
 Temporary commit content 62
+Temporary commit content 71
